syntax = "proto3";

package pb;

option go_package = "./";

service BoardService {
  rpc GetBoard(GetBoardRequest) returns (GetBoardResponse);
}

message GetBoardRequest {
  string board_id = 1;
}

message GetBoardResponse {
  string board_id = 1;
  string title = 2;
  string owner_id = 3;
}